# DTaaS

./: .codeclimate.yml  .codecov.yml  .eslintignore  .eslintrc  .gitignore  .markdownlint.json  .markdownlint.yaml  .mdl_style.rb  .mdlrc  .pnp.cjs  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  Makefile  README.md  SECURITY.md  STATUS.md  compose.yml  githook_test.sh  githook_test_log.txt  index.html  mkdocs-github.yml  mkdocs.yml  mkdocs_offline.yml
.devcontainer/: devcontainer.json
.git-hooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-push
cli/: DEVELOPER.README.md  DEVELOPER.md  README.md  add_users.py  dtaas.toml  pyproject.toml  requirements.txt  setup.py  users.local.yml  users.server.secure.yml  users.server.yml
cli/dtaas_cli/: cmd.py
cli/dtaas_cli/pkg/: dtaas.py  helper.py  users.py
cli/src/: cmd.py
cli/src/pkg/: config.py  dtaas.py  users.py  utils.py
cli/tests/: compose.users.test.yml  test_cli.py  test_utils.py
client/: .env  dum.ts  (+29 more)
servers/auth/: .env  .eslintignore  .gitignore  COMPOSE.md  Dockerfile  README.md  auth.py  compose.yml  conf  package.json  pyproject.toml  requirements.txt  start_docker.sh  tsconfig.json
servers/auth/auth_dtaas/: auth.py
servers/auth/files/: README.md
servers/auth/gateway-test/: README.md  auth  traefik.yml
servers/auth/gateway-test/dynamic/: fileConfig.yml
servers/auth/script/: build.bash  clean.bash  config.bash  start.bash  syntax.bash  test.bash
servers/auth/test/: index.ts
(+1814 files in other folders)
